Work on string obf

--- a/testing/fizzbuzz/config.yml
+++ b/testing/fizzbuzz/config.yml
@@ -1,5 +1,7 @@
 input: fizzbuzz.jar
 
+stringObfuscation:
+    enabled: true
 
 # Disable "WARNING: class was not found in the classpath" warnings
 # Default is false
