--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.30'
+    id 'java'
     id 'com.github.johnrengelman.shadow' version '1.2.3'
 }
 
@@ -24,7 +25,16 @@ shadowJar() {
 
 build.dependsOn.add("shadowJar")
 
-
+sourceSets {
+    main {
+        java {
+            srcDirs = ['src/main/kotlin']
+        }
+        resources {
+            srcDirs = ['src/resources']
+        }
+    }
+}
 
 repositories {
     mavenCentral()
