--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.30'
     id 'java'
+    id 'idea'
     id 'com.github.johnrengelman.shadow' version '1.2.3'
 }
 
