Host static files with ktor

--- a/testing/obftest/exampleConfig.yml
+++ b/testing/obftest/exampleConfig.yml
@@ -23,7 +23,7 @@ kotlinMetadata:
 
 # Employs various tactics to limit or remove functionality from reverse engineering libraries
 crasher:
-    enabled: false
+    enabled: true
 
 # Attempts to conceal method invocations
 indirection:
