--- a/testing/obftest/exampleConfig.yml
+++ b/testing/obftest/exampleConfig.yml
@@ -1,5 +1,5 @@
-input: out/artifacts/obftest_jar/obftest.jar
-output: obftest-obf.jar
+#input: out/artifacts/obftest_jar/obftest.jar
+input: obftest-obf.jar
 
 # The mappings created by the obfuscator are saved to this csv file
 mappingFile: mappings.csv
@@ -7,7 +7,7 @@ mappingFile: mappings.csv
 # Handles renaming
 remap:
     # Must be specified, strategies are by default disabled
-    enabled: false
+    enabled: true
     localVariableName: ""
 
 # Strip source file information
@@ -23,19 +23,19 @@ kotlinMetadata:
 
 # Employs various tactics to limit or remove functionality from reverse engineering libraries
 crasher:
-    enabled: true
+    enabled: false
 
 # Attempts to conceal method invocations
 indirection:
-    enabled: false
+    enabled: true
 
 # Encrypts constants constants and decrypts them dynamically at runtime
 # Uses Context checking and may also impact application startup time
 stringObfuscation:
-    enabled: false
+    enabled: true
 
 flowObfuscation:
-    enabled: false
+    enabled: true
 
 # Disable "WARNING: class was not found in the classpath" warnings
 # Default is false
