--- a/testing/obftest/exampleConfig.yml
+++ b/testing/obftest/exampleConfig.yml
@@ -23,8 +23,8 @@ kotlinMetadata:
 
 # Employs various tactics to limit or remove functionality from reverse engineering libraries
 crasher:
-    enabled: false
-    checksums: false
+    enabled: true
+    checksums: true
 
 # Attempts to conceal method invocations
 indirection:
