--- a/testing/pyro/exampleConfig.yml
+++ b/testing/pyro/exampleConfig.yml
@@ -1,61 +1,63 @@
-input: out\artifacts\obftest_jar\obftest.jar
-output: obftest-obf.jar
+input: pyro.jar
+output: pyro-obf.jar
+
+libraries:
+    - D:/Computing/backdoored_old/dependencies/forge-1.12.2-14.23.1.2584-binpatched.jar
+    - D:/Computing/backdoored_old/dependencies/forge-1.12.2-14.23.1.2584-srgBin.jar
+
+hardExclusions:
+    - club/
+    - com/
+    - javassist/
+    - net/
+    - org/
+    - kotlin/
+    - team/
+
+exclusions:
+    - io/github/giantnuker/pyro/Pyro
+    - io/github/giantnuker/pyro/mixin
 
 # The mappings created by the obfuscator are saved to this csv file
 mappingFile: mappings.csv
 
-hardExclusions:
-    - ibxm/
-    - javax/
-    - kotlin/
-    - kotlinx/
-    - net/
-    - org/
-
 # Handles renaming
 remap:
     # Must be specified, strategies are by default disabled
-    enabled: false
+    enabled: true
+    classPrefix: "io/github/giantnuker/pyro/"
     localVariableName: ""
+    aggressiveOverloading: false
 
 # Strip source file information
 sourceStrip:
-    enabled: false
+    enabled: true
     # Default is REMOVE, options [KEEP/REMOVE]
     lineNumbers: REMOVE
 
 # Removes additional data created by the kotlin compiler
 # WARNING: Can break the kotlin.reflect library
 kotlinMetadata:
-    enabled: false
-    type: CENSOR
+    enabled: true
 
 # Employs various tactics to limit or remove functionality from reverse engineering libraries
 crasher:
-    enabled: true
-    checksums: false
+    enabled: false
 
 # Attempts to conceal method invocations
 indirection:
-    enabled: true
+    enabled: false
 
 # Encrypts constants constants and decrypts them dynamically at runtime
 # Uses Context checking and may also impact application startup time
 stringObfuscation:
-    enabled: false
+    enabled: true
 
 flowObfuscation:
-    enabled: false
+    enabled: true
     severity: 5
     mergeMethods: BLOAT_CLASSES
-
-optimisation:
-    enabled: false
-    mutableEnumValues: false
 
 # Disable "WARNING: class was not found in the classpath" warnings
 # Default is false
 ignoreClassPathNotFound: false
-
-# Use the java classloader rather than ASM to load libraries, might offer better peformane
-useJavaClassloader: false
