--- a/testing/obftest/exampleConfig.yml
+++ b/testing/obftest/exampleConfig.yml
@@ -33,7 +33,7 @@ kotlinMetadata:
 # Employs various tactics to limit or remove functionality from reverse engineering libraries
 crasher:
     enabled: true
-    checksums: false
+    checksums: true
 
 # Attempts to conceal method invocations
 indirection:
