Fix pop2 stack prediction at type 2

--- a/testing/obftest/exampleConfig.yml
+++ b/testing/obftest/exampleConfig.yml
@@ -45,7 +45,7 @@ stringObfuscation:
     enabled: true
 
 flowObfuscation:
-    enabled: false
+    enabled: true
     severity: 1
     mergeMethods: BLOAT_CLASSES
 
