--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.30'
     id 'java'
     id 'idea'
-    id 'com.github.johnrengelman.shadow' version '1.2.3'
+    id 'com.github.johnrengelman.shadow' version '5.2.0'
 }
 
 group 'cookiedragon'
@@ -17,6 +17,10 @@ jar {
 }
 
 shadowJar() {
+    minimize {
+        exclude(dependency('com.sksamuel.hoplite:hoplite-core:1.1.4'))
+        exclude(dependency('com.sksamuel.hoplite:hoplite-yaml:1.1.4'))
+    }
     classifier = "release"
 
     manifest {
@@ -47,7 +51,6 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    compile "org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.1.0"
 
     compile 'org.ow2.asm:asm:7.1'
     compile 'org.ow2.asm:asm-tree:7.1'
@@ -56,7 +59,6 @@ dependencies {
 
     compile 'com.sksamuel.hoplite:hoplite-core:1.1.4'
     compile 'com.sksamuel.hoplite:hoplite-yaml:1.1.4'
-    compile 'com.sksamuel.hoplite:hoplite-json:1.1.4'
 }
 
 compileKotlin {
